--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "lint": "next lint",
     "export": "next export",
     "deploy": "gh-pages -d out"
-    
   },
   "dependencies": {
     "next": "15.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.4.0"
+    "react-icons": "^5.4.0",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "@types/node": "^20",
